--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "pm2": "pm2"
   },
   "dependencies": {
     "next": "9.5.1",
+    "pm2": "^4.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
