:sparkles: process listing page

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "9.5.1",
     "pm2": "^4.4.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swr": "^0.3.0"
   }
 }
